# Polynomial

./: .gitignore  Polynomial.h  README.md  example.mak  example1.mak  example2.mak  test.cpp  test.mak
examples/: CMakeLists.txt  Makefile  example1.cpp  example1.mak  example2.cpp  example2.mak
tests/: CMakeLists.txt  Makefile  test.cpp
